# melon

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ast.c  ast.h  astwalker.c  astwalker.h  charstream.c  charstream.h  clioptions.c  clioptions.h  codegen.c  codegen.h  core.c  core.h  debug.c  debug.h  hash.c  hash.h  lexer.c  lexer.h  main.c  opcodes.h  parser.c  parser.h  semantic.c  semantic.h  symtable.c  symtable.h  token.c  token.h  utils.c  utils.h  value.c  value.h  vector.h  vm.c  vm.h
test/: add.txt  array.txt  array2.txt  array3.txt  array4.txt  builtin.txt  builtin2.txt  class.txt  class2.txt  class3.txt  class4.txt  closure.txt  closure2.txt  closure3.txt  closure4.txt  factorial.txt  fib.txt  for.txt  forin.txt  math.txt  null.txt  parse_errors.txt  postfix.txt  range.txt  rect.txt  semantic.txt  static.txt  string.txt  sudoku.txt  vector3.txt
